--- a/_config.yml
+++ b/_config.yml
@@ -72,18 +72,27 @@ body {font-family: "Lato", sans-serif}
     <p class="w3-justify">We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
       ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
       adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      
     <div class="w3-row w3-padding-32">
       <div class="w3-third">
         <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+      <a href="file:///C:/Users/rlaej/Desktop/%EA%B3%BC%EC%A0%9C1.html" target="_blank">Visit hw1!</a> 
+        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:20%">
       </div>
       <div class="w3-third">
         <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+        <a href="file:///C:/Users/rlaej/Desktop/%EA%B3%BC%EC%A0%9C1.html" target="_blank">Visit hw2!</a> 
+        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:20%">
+         </div>
+      <div class="w3-third">
+        <p>Name</p>
+       <a href="file:///C:/Users/rlaej/Desktop/%EA%B3%BC%EC%A0%9C1.html" target="_blank">Visit hw3</a> 
+        <img src="/w3images/bandmember.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:20%">
       </div>
       <div class="w3-third">
         <p>Name</p>
-        <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
+     <a href="file:///C:/Users/rlaej/Desktop/%EA%B3%BC%EC%A0%9C1.html" target="_blank">Visit hw4</a> 
+        <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:20%">
       </div>
     </div>
   </div>
